# se3posenets-pytorch

./: .gitignore  README.md  _init_paths.py  baxter_ctrl_readme  blockdata.py  compare_nets_video.py  compare_nets_video_proj.py  compute_poses_pretrained.py  ctrlnets.py  ctrlnetworks.py  data.py  data_viz.py  flownets.py  gen_comp_frames.py  helperfuncs.py  main-ctrlnets.py  main_ctrlnets.py  main_ctrlnets_coord.py  main_ctrlnets_fb.py  main_ctrlnets_multi.py  main_ctrlnets_multi_f.py  main_ctrlnets_multi_graph_f.py  main_flownets_multi.py  main_inversemodel_f.py  main_kinchain.py  main_levmar.py  main_posedelta.py  main_posedelta_inv.py  main_posenets.py  main_se3nets.py  main_se3poseencoder.py  main_se3poseencoder_blocks.py  main_se3posenets.py  main_se3posenets_blocks.py  main_se3posenets_multi.py  main_se3posenets_se3compose.py  main_transitionposedelta.py  main_transitionposedelta_f.py  main_transnets.py  main_transnets_gtposes.py  (+26 more)
config/misc/: test_deltaflow_interp.yaml
config/posenets/: 8se3_1seq_alldata.yaml  8se3_1seq_olddata.yaml  8se3_1seq_singlejtdata.yaml
config/realdata/: 8se3_soft_5seq_mse.yaml  8se3_soft_5seq_normmsesqrt.yaml
config/se3nets/: 8se3_1seq_normmsesqrt_motionnormloss.yaml  8se3_soft_1seq_mse.yaml  8se3_wtsharpenr1s0_1seq_normmsesqrt_motionnormloss.yaml
config/singlejt/: jt0_2se3_wtsharpenr1s0_1seq.yaml  jt0_4se3_wtsharpenr1s0_1seq.yaml  jt2_2se3_wtsharpenr1s0_1seq.yaml  jt4_2se3_soft_1seq.yaml  jt4_2se3_wtsharpenr1s0_1seq.yaml  jt4_4se3_soft_1seq.yaml  jt4_4se3_wtsharpenr1s0_1seq.yaml  jt5_2se3_soft_1seq.yaml  jt5_2se3_wtsharpenr1s0_1seq.yaml  jt5_4se3_soft_1seq.yaml  jt5_4se3_wtsharpenr1s0_1seq.yaml  jt6_2se3_soft_1seq.yaml  jt6_2se3_wtsharpenr1s0_1seq.yaml  jt6_2se3_wtsharpenr1s0_1seq_consis1e-4_scale1e6.yaml  jt6_4se3_soft_1seq.yaml  jt6_4se3_wtsharpenr1s0_1seq.yaml  jt6_4se3_wtsharpenr1s0_1seq_consis1e-4_scale1e6.yaml
config/testgt/: def.yaml  def_gtdeltas.yaml  def_gtdeltas_posekinchain.yaml  def_gtdeltas_posekinchain_righttoleft.yaml  def_gtmasks.yaml  def_gtmasks_posekinchain.yaml  def_gtmasks_posekinchain_righttoleft.yaml  def_gtmasksposes.yaml  def_gtmasksposes_deltaloss.yaml  def_gtposes.yaml  def_gtposeswdeltas.yaml  def_posekinchain.yaml  def_posekinchain_righttoleft.yaml
config/transnets/: 8se3_1seq_alldata.yaml  8se3_1seq_olddata.yaml  8se3_1seq_singlejtdata.yaml
config/transnets_gtposes/: real-gtposes-default-rmsprop.yaml  sim-gtposes-default-rmsprop.yaml
data/: test.py
e2c/: _init_paths.py  closedloopctrl.py  helpers.py  model.py  predviz.py  train.py
layers/: CollapseRtPivots.py  ComposeRt.py  ComposeRtPair.py  DepthImageToDense3DPoints.py  NTfm3D.py  NTfm3DDelta.py  NormalizedMSELoss.py  RtInverse.py  SE3ToRt.py  Weighted3DTransformLoss.py  Weighted3DTransformNormLoss.py  WeightedAveragePoints.py  build.py  reorg_layer.py  roi_pool.py  roi_pool_py.py  se3_to_rt.py
layers/src/: NTfm3D.cu  (+30 more)
lib/: setup.py
lib/torchviz/: CMakeLists.txt  __init__.py  comp_visualizer.cpp  comp_visualizer.hpp  compviz.cpp  compviz.hpp  compviz.pyx  data_visualizer.cpp  data_visualizer.hpp  pangodataviz.cpp  pangodataviz.hpp  pangodataviz.pyx  pangolin_visualizer.cpp  pangolin_visualizer.hpp  pangoposeviz.cpp  pangoposeviz.hpp  pangoposeviz.pyx  pangoviz.cpp  pangoviz.hpp  pangoviz.pyx  pose_visualizer.cpp  pose_visualizer.hpp  realctrl_visualizer.cpp  realctrl_visualizer.hpp  realctrlcomp_visualizer.cpp  realctrlcomp_visualizer.hpp  realctrlcompviz.cpp  realctrlcompviz.hpp  realctrlcompviz.pyx  realctrlviz.cpp  realctrlviz.hpp  realctrlviz.pyx  simctrl_visualizer.cpp  simctrl_visualizer.hpp  simctrlviz.cpp  simctrlviz.hpp  simctrlviz.pyx
lib/torchviz/models/baxter/: baxter_rosmesh.xml  baxter_rosmesh_old.xml
lib/torchviz/models/baxter/ros_mesh/electric_gripper/: electric_gripper_base.DAE  electric_gripper_base.ply
lib/torchviz/models/baxter/ros_mesh/electric_gripper/fingers/: extended_narrow.DAE  extended_narrow.ply
lib/torchviz/models/baxter/ros_mesh/head/: H1.DAE
lib/torchviz/models/baxter/ros_mesh/lower_elbow/: E1.DAE
lib/torchviz/models/baxter/ros_mesh/lower_forearm/: W1.DAE
lib/torchviz/models/baxter/ros_mesh/lower_shoulder/: S1.DAE
lib/torchviz/models/baxter/ros_mesh/upper_elbow/: E0.DAE
lib/torchviz/models/baxter/ros_mesh/upper_forearm/: W0.DAE
lib/torchviz/models/baxter/ros_mesh/upper_shoulder/: S0.DAE
lib/torchviz/models/baxter/ros_mesh/wrist/: W2.DAE
lib/torchviz/shaders/: color.frag  color.vert  depth.frag  depth.vert  normals.frag  normals.vert  vertmap.frag  vertmap.vert  vertmapwmeshid.frag  vertmapwmeshid.vert
lib/torchviz/src/: track_space_justin_demo.cpp  tracker.cpp  tracker.h
lib/torchviz/src/depth_sources/: image_depth_source.h
lib/torchviz/src/geometry/: plane_fitting.cu
lib/torchviz/src/model/: mirrored_model.cpp  mirrored_model.h  model.cpp  model.h
lib/torchviz/src/optimization/: optimizer.cpp  priors.h
lib/torchviz/src/point_cloud_src/: point_cloud_src.h
lib/torchviz/src/render/: renderer.cpp  renderer.h
lib/torchviz/src/util/: csv_util.cpp  csv_util.h  type_list.h
lib/torchviz/src/visualization/: data_association_viz.cu  data_association_viz.h
test/: append_timestamps_to_statefiles.py  dataloader_err_test.py  encode_vids_ffmpeg.sh  gen_poseerr_plot.py  pytorch_comparisons.lua  relu_test.py  save_gtposes_ctrls.py  save_gtposes_jtangles.py  save_jtangle_poses.py  save_predposes_jtangles.py  se3_to_rt.py  smooth_motion.py  test_aa_to_rt_jac.py  test_ctrlnets.py  test_ctrlnetworks.py  test_data.py  test_dataloading.py  test_depth_subscriber.py  test_flowvisibility_computation.py  test_image_process.py  test_layers.py  test_levmar_ntfm3d.py  test_levmar_ntfm3d_sim.py  test_levmar_ntfm3d_xalglib.py  test_levmar_ntfm3daa.py  test_pick.py  test_pose_render.py  test_posectrlnet.lua  test_real_data_load.py  test_se3layer.py  test_vtk_poses.py  torch_comparisons.py  viz_poses_rviz.py  viz_vtk_transnets_gtposes.py
test/normaltest/displaynormals/: CMakeLists.txt  main.cpp
util/: __init__.py  customdataloader.py  dataloader.py  misc.py  quat.py  tblogger.py  util3d.py
(+824 files in other folders)
